# baremetal-workqueue

./: CMakeLists.txt  CMakePresets.json  gcovr.cfg
cmake/: extensions.cmake  gcc-arm-none-eabi.cmake
include/application/: peripherals.h
include/common/application/: application_main.h  application_startup.h  button_handler.h  peripherals.h  uptime_printer.h
include/common/driver/: gpio.h  uart.h
include/common/service/: assert.h  cbprintf.h  log.h  print.h  system.h  work.h
include/common/util/: container_of.h  types.h  unused.h
include/drivers/: gpio.h  sleep.h  system.h  uart.h
include/firmware/driver/: gpio_stm32.h  uart_stm32.h
include/services/: work.h
include/simulator/application/: peripherals_sim.h
include/simulator/driver/: gpio_sim.h  uart_sim.h
include/simulator/service/: adapter_sim.h  system_sim.h
include/unit_test/service/: unit_test.h  work_ext.h
include/util/: types.h  unused.h
src/: CMakeLists.txt
src/application/: CMakeLists.txt  application_main.c
src/common/: CMakeLists.txt
src/common/application/: application_main.c  application_startup.c  button_handler.c  uptime_printer.c
src/common/service/: assert.c  cbprintf.c  log.c  print.c  work.c
src/common/service/work/: work.c
src/firmware/: CMakeLists.txt
src/firmware/application/: peripherals_stm32.c
src/firmware/driver/: gpio_stm32.c  uart_stm32.c
src/firmware/service/: system_stm32.c
src/firmware/stm32cube/Core/Inc/: stm32f4xx_it.h
src/firmware/stm32cube/Core/Src/: main.c  stm32f4xx_it.c
src/platform/: CMakeLists.txt
src/platform/simulator/: CMakeLists.txt  main.c  peripherals.c
src/platform/simulator/drivers/: gpio_sim.c  gpio_sim.h  sleep_sim.c  system_sim.c  uart_sim.c  uart_sim.h
src/services/: CMakeLists.txt  work.c
src/simulator/: CMakeLists.txt  main.c
src/simulator/application/: peripherals_sim.c
src/simulator/driver/: gpio_sim.c  uart_sim.c
src/simulator/service/: adapter_sim.c  system_sim.c
src/unit_test/: CMakeLists.txt  main.cpp
src/unit_test/application/: peripherals_fake.c  peripherals_fake.cpp  test_uptime_printer.cpp
src/unit_test/driver/: uart_mock.cpp
src/unit_test/service/: system_fake.c  system_fake.cpp  test_cbprintf.cpp  test_log.cpp  test_work.cpp  work_ext.c
